http2java/src/main/java/compiler/HttpParser.java
// $ANTLR 3.5.1 C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g 2024-01-24 17:02:27

	package compiler; 		
	import variables.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class HttpParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACCEPT", "ACCEPT_ENCODING", "ACCEPT_LANGUAGE", 
		"ALPHA_CHAR", "ALPHA_NUM_CHAR", "AUTHORIZATION", "BODY_STRING", "CACHE_CONTROL", 
		"COLUMN", "COMMA", "COMMENT", "CONTENT_TYPE", "COOKIE", "DNS", "DNS_ELEMENT", 
		"EQUALS", "ERROR_TOKEN", "ESC_SEQ", "GET", "HEX_DIGIT", "HOST", "HTTP_VERSION", 
		"ID", "INT_NUM", "IPV4", "LANGUAGE_ELEMENT", "MAX_FORWARDS", "MIME", "MIME_SUBTYPE", 
		"MIME_TYPE", "MULTIPART_MIME", "NUM", "OCTAL_ESC", "PATH", "PATH_ELEMENT", 
		"POST", "PRODUCT", "PRODUCT_INFO", "Q", "QUERY", "QUERY_ELEMENT", "Q_VAL", 
		"SEMI_COLUMN", "STAR", "STRING", "TERMINAL", "UNICODE_ESC", "USER_AGENT", 
		"VERS_NUM", "WS"
	};
	public static final int EOF=-1;
	public static final int ACCEPT=4;
	public static final int ACCEPT_ENCODING=5;
	public static final int ACCEPT_LANGUAGE=6;
	public static final int ALPHA_CHAR=7;
	public static final int ALPHA_NUM_CHAR=8;
	public static final int AUTHORIZATION=9;
	public static final int BODY_STRING=10;
	public static final int CACHE_CONTROL=11;
	public static final int COLUMN=12;
	public static final int COMMA=13;
	public static final int COMMENT=14;
	public static final int CONTENT_TYPE=15;
	public static final int COOKIE=16;
	public static final int DNS=17;
	public static final int DNS_ELEMENT=18;
	public static final int EQUALS=19;
	public static final int ERROR_TOKEN=20;
	public static final int ESC_SEQ=21;
	public static final int GET=22;
	public static final int HEX_DIGIT=23;
	public static final int HOST=24;
	public static final int HTTP_VERSION=25;
	public static final int ID=26;
	public static final int INT_NUM=27;
	public static final int IPV4=28;
	public static final int LANGUAGE_ELEMENT=29;
	public static final int MAX_FORWARDS=30;
	public static final int MIME=31;
	public static final int MIME_SUBTYPE=32;
	public static final int MIME_TYPE=33;
	public static final int MULTIPART_MIME=34;
	public static final int NUM=35;
	public static final int OCTAL_ESC=36;
	public static final int PATH=37;
	public static final int PATH_ELEMENT=38;
	public static final int POST=39;
	public static final int PRODUCT=40;
	public static final int PRODUCT_INFO=41;
	public static final int Q=42;
	public static final int QUERY=43;
	public static final int QUERY_ELEMENT=44;
	public static final int Q_VAL=45;
	public static final int SEMI_COLUMN=46;
	public static final int STAR=47;
	public static final int STRING=48;
	public static final int TERMINAL=49;
	public static final int UNICODE_ESC=50;
	public static final int USER_AGENT=51;
	public static final int VERS_NUM=52;
	public static final int WS=53;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public HttpParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public HttpParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return HttpParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g"; }


		public SemanticHandler h = new SemanticHandler();
		
		@Override
		public void displayRecognitionError(String[] tokenNames, RecognitionException e) {		
			h.handleError(input.LT(1), getErrorHeader(e), getErrorMessage(e, tokenNames));
		}
		



	// $ANTLR start "request"
	// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:32:1: request : rl= requestLine (hdr= header )* (b= body )? EOF ;
	public final void request() throws RecognitionException {
		RequestLine rl =null;
		Header hdr =null;
		String b =null;

		try {
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:33:2: (rl= requestLine (hdr= header )* (b= body )? EOF )
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:33:4: rl= requestLine (hdr= header )* (b= body )? EOF
			{
			pushFollow(FOLLOW_requestLine_in_request61);
			rl=requestLine();
			state._fsp--;

			 h.addRequestLine(rl); 
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:34:3: (hdr= header )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= ACCEPT && LA1_0 <= ACCEPT_LANGUAGE)||LA1_0==AUTHORIZATION||LA1_0==CACHE_CONTROL||(LA1_0 >= CONTENT_TYPE && LA1_0 <= COOKIE)||LA1_0==HOST||LA1_0==MAX_FORWARDS||LA1_0==STRING||LA1_0==USER_AGENT) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:34:4: hdr= header
					{
					pushFollow(FOLLOW_header_in_request70);
					hdr=header();
					state._fsp--;

					 h.addHeader(hdr); 
					}
					break;

				default :
					break loop1;
				}
			}

			 h.checkHeaders(); 
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:35:3: (b= body )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==BODY_STRING) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:35:4: b= body
					{
					pushFollow(FOLLOW_body_in_request83);
					b=body();
					state._fsp--;

					 h.addBody(b); 
					}
					break;

			}

			match(input,EOF,FOLLOW_EOF_in_request91); 
			 h.generateJavaCode(); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "request"



	// $ANTLR start "requestLine"
	// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:40:1: requestLine returns [RequestLine rl] : m= method p= pathRule v= HTTP_VERSION TERMINAL ;
	public final RequestLine requestLine() throws RecognitionException {
		RequestLine rl = null;


		Token v=null;
		String m =null;
		String p =null;

		try {
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:41:2: (m= method p= pathRule v= HTTP_VERSION TERMINAL )
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:41:4: m= method p= pathRule v= HTTP_VERSION TERMINAL
			{
			pushFollow(FOLLOW_method_in_requestLine112);
			m=method();
			state._fsp--;

			pushFollow(FOLLOW_pathRule_in_requestLine118);
			p=pathRule();
			state._fsp--;

			v=(Token)match(input,HTTP_VERSION,FOLLOW_HTTP_VERSION_in_requestLine124); 
			match(input,TERMINAL,FOLLOW_TERMINAL_in_requestLine128); 
			 rl = h.createRequestLine(m, p, v.getText()); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return rl;
	}
	// $ANTLR end "requestLine"



	// $ANTLR start "pathRule"
	// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:47:1: pathRule returns [String p] : ( (s= PATH (q= QUERY )? ) | (s= STRING ) );
	public final String pathRule() throws RecognitionException {
		String p = null;


		Token s=null;
		Token q=null;

		try {
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:48:2: ( (s= PATH (q= QUERY )? ) | (s= STRING ) )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==PATH) ) {
				alt4=1;
			}
			else if ( (LA4_0==STRING) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:48:4: (s= PATH (q= QUERY )? )
					{
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:48:4: (s= PATH (q= QUERY )? )
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:48:5: s= PATH (q= QUERY )?
					{
					s=(Token)match(input,PATH,FOLLOW_PATH_in_pathRule147); 
					 p = s.getText(); 
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:48:34: (q= QUERY )?
					int alt3=2;
					int LA3_0 = input.LA(1);
					if ( (LA3_0==QUERY) ) {
						alt3=1;
					}
					switch (alt3) {
						case 1 :
							// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:48:35: q= QUERY
							{
							q=(Token)match(input,QUERY,FOLLOW_QUERY_in_pathRule154); 
							 p += q.getText(); 
							}
							break;

					}

					}

					}
					break;
				case 2 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:49:4: (s= STRING )
					{
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:49:4: (s= STRING )
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:49:5: s= STRING
					{
					s=(Token)match(input,STRING,FOLLOW_STRING_in_pathRule167); 
					 p = h.handleQuotes(s.getText()); 
					}

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "pathRule"



	// $ANTLR start "method"
	// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:52:1: method returns [String m] : (s= GET |s= POST ) ;
	public final String method() throws RecognitionException {
		String m = null;


		Token s=null;

		try {
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:53:2: ( (s= GET |s= POST ) )
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:53:4: (s= GET |s= POST )
			{
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:53:4: (s= GET |s= POST )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==GET) ) {
				alt5=1;
			}
			else if ( (LA5_0==POST) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:53:5: s= GET
					{
					s=(Token)match(input,GET,FOLLOW_GET_in_method187); 
					}
					break;
				case 2 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:54:4: s= POST
					{
					s=(Token)match(input,POST,FOLLOW_POST_in_method194); 
					}
					break;

			}

			 m = s.getText(); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return m;
	}
	// $ANTLR end "method"



	// $ANTLR start "header"
	// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:57:1: header returns [Header hdr] : (hd= hostRule |hd= userAgentRule |hd= contentTypeRule |hd= acceptRule |hd= cookieRule |hd= authorizationRule |hd= acceptLanguageRule |hd= acceptEncodingRule |hd= chacheControlRule |hd= maxForwardsRule |hd= genericHeaderRule ) ;
	public final Header header() throws RecognitionException {
		Header hdr = null;


		Header hd =null;

		try {
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:58:2: ( (hd= hostRule |hd= userAgentRule |hd= contentTypeRule |hd= acceptRule |hd= cookieRule |hd= authorizationRule |hd= acceptLanguageRule |hd= acceptEncodingRule |hd= chacheControlRule |hd= maxForwardsRule |hd= genericHeaderRule ) )
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:58:4: (hd= hostRule |hd= userAgentRule |hd= contentTypeRule |hd= acceptRule |hd= cookieRule |hd= authorizationRule |hd= acceptLanguageRule |hd= acceptEncodingRule |hd= chacheControlRule |hd= maxForwardsRule |hd= genericHeaderRule )
			{
			// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:58:4: (hd= hostRule |hd= userAgentRule |hd= contentTypeRule |hd= acceptRule |hd= cookieRule |hd= authorizationRule |hd= acceptLanguageRule |hd= acceptEncodingRule |hd= chacheControlRule |hd= maxForwardsRule |hd= genericHeaderRule )
			int alt6=11;
			switch ( input.LA(1) ) {
			case HOST:
				{
				alt6=1;
				}
				break;
			case USER_AGENT:
				{
				alt6=2;
				}
				break;
			case CONTENT_TYPE:
				{
				alt6=3;
				}
				break;
			case ACCEPT:
				{
				alt6=4;
				}
				break;
			case COOKIE:
				{
				alt6=5;
				}
				break;
			case AUTHORIZATION:
				{
				alt6=6;
				}
				break;
			case ACCEPT_LANGUAGE:
				{
				alt6=7;
				}
				break;
			case ACCEPT_ENCODING:
				{
				alt6=8;
				}
				break;
			case CACHE_CONTROL:
				{
				alt6=9;
				}
				break;
			case MAX_FORWARDS:
				{
				alt6=10;
				}
				break;
			case STRING:
				{
				alt6=11;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:58:5: hd= hostRule
					{
					pushFollow(FOLLOW_hostRule_in_header215);
					hd=hostRule();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:59:4: hd= userAgentRule
					{
					pushFollow(FOLLOW_userAgentRule_in_header222);
					hd=userAgentRule();
					state._fsp--;

					}
					break;
				case 3 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:60:4: hd= contentTypeRule
					{
					pushFollow(FOLLOW_contentTypeRule_in_header229);
					hd=contentTypeRule();
					state._fsp--;

					}
					break;
				case 4 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:61:4: hd= acceptRule
					{
					pushFollow(FOLLOW_acceptRule_in_header236);
					hd=acceptRule();
					state._fsp--;

					}
					break;
				case 5 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:62:4: hd= cookieRule
					{
					pushFollow(FOLLOW_cookieRule_in_header243);
					hd=cookieRule();
					state._fsp--;

					}
					break;
				case 6 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:63:4: hd= authorizationRule
					{
					pushFollow(FOLLOW_authorizationRule_in_header250);
					hd=authorizationRule();
					state._fsp--;

					}
					break;
				case 7 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:64:4: hd= acceptLanguageRule
					{
					pushFollow(FOLLOW_acceptLanguageRule_in_header257);
					hd=acceptLanguageRule();
					state._fsp--;

					}
					break;
				case 8 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:65:4: hd= acceptEncodingRule
					{
					pushFollow(FOLLOW_acceptEncodingRule_in_header264);
					hd=acceptEncodingRule();
					state._fsp--;

					}
					break;
				case 9 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:66:4: hd= chacheControlRule
					{
					pushFollow(FOLLOW_chacheControlRule_in_header271);
					hd=chacheControlRule();
					state._fsp--;

					}
					break;
				case 10 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:67:4: hd= maxForwardsRule
					{
					pushFollow(FOLLOW_maxForwardsRule_in_header278);
					hd=maxForwardsRule();
					state._fsp--;

					}
					break;
				case 11 :
					// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:68:4: hd= genericHeaderRule
					{
					pushFollow(FOLLOW_genericHeaderRule_in_header285);
					hd=genericHeaderRule();
					state._fsp--;

					}
					break;

			}

			 hdr = hd;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return hdr;
	}
	// $ANTLR end "header"



	// $ANTLR start "hostRule"
	// C:\\Users\\lenovo\\Desktop\\ProgettiGit\\ProgettoLFC\\http2java\\src\\main\\java\\compiler\\Http.g:72:1: hostRule returns [Header hd] :k= HOST COLUMN (v= ( DNS | IPV4 ) ) ( (c= COLUMN n= INT_NUM ) )? TERMINAL ;
	public final Header hostRule() throws RecognitionException {
		Header hd = null;


		Token k=null;
		Token v=null;
		Token c=null;
		Token n=null;
